test/fixtures/error/04-infinite-template/input.ts
import mint from "mintz";

export const x = mint<`${string}_${string}`>();
